--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         margin: 0;
         font-family: "Space Mono", monospace;
         overflow: hidden;
-        background: radial-gradient(circle at top right, rgba(0, 255, 255, 0.25), rgba(255, 0, 0, 0.35) 60%, #000 100%);
+        background: radial-gradient(circle at top right, rgba(40,0,80,0.6), rgba(0,40,80,0.6) 50%, #000 100%);
         color: white;
     }
 
