--- a/index.html
+++ b/index.html
@@ -124,6 +124,24 @@
 <h1>Posture Checker</h1>
 
 <div class="panel">
+    <h2>How to Use</h2>
+    <p>1. Click the Start button below.<br>
+       2. Allow the webpage to access your webcam.<br>
+       3. Sit where your upper body is visible on camera.<br>
+       4. The AI will classify your posture as Good, Bad, or Neutral in real time.</p>
+    <h3>What This Project Does</h3>
+    <p>This AI posture checker uses a Teachable Machine pose model to help users improve posture anywhere—at school, home, or even in bed. It identifies three posture classes: Good, Bad, and Neutral/Undetected.</p>
+
+    <h3>The Problem</h3>
+    <p>Many students and everyday computer users spend long periods working on devices, which often leads to slouching, neck strain, and back discomfort. Poor posture can affect long-term health, comfort, and even focus. However, most people don’t realize when they begin to slouch.</p>
+
+    <h3>Who Benefits</h3>
+    <p>This tool helps anyone who uses a computer or mobile device for long periods. It is especially helpful for:
+        <br>• Students working on Chromebooks or homework
+        <br>• People who study or work from home
+        <br>• Users who want instant posture reminders
+        <br>• Anyone hoping to build healthier posture habits in daily life
+    </p>
     <button type="button" onclick="init()">Start</button>
     <div id="webcam-container"></div>
     <div id="label-container"></div>
