--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         font-family: "Space Mono", monospace;
         background: radial-gradient(circle at top right, rgba(40,0,80,0.6), rgba(0,40,80,0.6) 50%, #000 100%);
         color: white;
-        overflow-y: auto; /* Allow vertical scrolling */
+        overflow-y: auto;
+        display: flex;
+        justify-content: center;
     }
     .starfield {
         position: fixed;
@@ -43,12 +45,24 @@
     .panel {
         background: rgba(0, 0, 0, 0.45);
         backdrop-filter: blur(12px);
-        width: 360px;
-        margin: 60px auto 120px auto; /* Added bottom margin for scroll */
+        width: 70%;
+        max-width: 1000px;
+        margin: 60px;
         padding: 25px;
         border-radius: 20px;
         border: 2px solid rgba(255,255,255,0.2);
         box-shadow: 0 0 25px rgba(0, 200, 255, 0.25);
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+    .info {
+        width: 50%;
+        padding-right: 20px;
+    }
+    .webcam-section {
+        width: 50%;
         text-align: center;
     }
     button {
@@ -93,29 +107,35 @@
 <h1>Posture Checker</h1>
 
 <div class="panel">
-    <h2>How to Use</h2>
-    <p>1. Click the Start button below.<br>
-       2. Allow webcam access.<br>
-       3. Sit where your upper body is visible.<br>
-       4. The AI will classify your posture in real time.</p>
+    <div class="info">
+        <h2>How to Use</h2>
+        <p>1. Click the Start button.<br>
+           2. Allow webcam access.<br>
+           3. Sit so your upper body is visible.<br>
+           4. The AI will classify your posture in real time.</p>
 
-    <h3>What This Project Does</h3>
-    <p>This AI posture checker uses a Teachable Machine pose model to help users improve posture anywhere—at school, home, or even in bed. It identifies three posture classes: Good, Bad, and Neutral/Undetected.</p>
+        <h3>What This Project Does</h3>
+        <p>This AI posture checker uses a Teachable Machine pose model to help users improve posture anywhere—at school, home, or even in bed. It identifies three posture classes: Good, Bad, and Neutral/Undetected.</p>
 
-    <h3>The Problem</h3>
-    <p>Many students and computer users spend long periods working on devices, leading to slouching, neck strain, and back discomfort. Poor posture affects focus, comfort, and long-term health, but most people don’t notice when they begin to slouch.</p>
+        <h3>The Problem</h3>
+        <p>Many students and computer users spend long periods working on devices, leading to slouching, neck strain, and back discomfort. Poor posture affects focus, comfort, and long-term health, but most people don’t notice when they begin to slouch.</p>
 
-    <h3>Who Benefits</h3>
-    <p>This tool helps anyone who uses a computer for long periods, especially:<br>
-        • Students working on Chromebooks<br>
-        • People studying or working from home<br>
-        • Users who want instant posture reminders<br>
-        • Anyone trying to build healthier posture habits
-    </p>
+        <h3>Who Benefits</h3>
+        <p>This tool helps anyone who uses a computer or mobile device extensively. Specifically, it helps:<br>
+            • Students and teachers using Chromebooks or laptops<br>
+            • Office workers or remote workers<br>
+            • Gamers and streamers spending hours at a desk<br>
+            • Artists or programmers working on screens<br>
+            • People recovering from minor back or neck issues<br>
+            • Anyone wanting instant feedback on posture habits
+        </p>
+    </div>
 
-    <button type="button" onclick="init()">Start</button>
-    <div id="webcam-container"></div>
-    <div id="label-container"></div>
+    <div class="webcam-section">
+        <button type="button" onclick="init()">Start</button>
+        <div id="webcam-container"></div>
+        <div id="label-container"></div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
