--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     body {
         margin: 0;
         font-family: "Space Mono", monospace;
-        background: radial-gradient(circle at top right, rgba(40,0,80,0.6), rgba(0,40,80,0.6) 50%, #000 100%);
+        background: radial-gradient(circle at top, #00001a, #1a0026);
         color: white;
         overflow-y: auto;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
     .starfield {
         position: fixed;
@@ -37,33 +38,32 @@
     }
     h1 {
         text-align: center;
-        font-size: 2.2em;
-        margin-top: 40px;
+        font-size: 2.5em;
+        margin: 40px 0;
         letter-spacing: 4px;
         text-shadow: 0 0 12px rgba(255,255,255,0.8);
+    }
+    .panel-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 90%;
+        max-width: 1200px;
+        gap: 20px;
     }
     .panel {
         background: rgba(0, 0, 0, 0.45);
         backdrop-filter: blur(12px);
-        width: 70%;
-        max-width: 1000px;
-        margin: 60px;
-        padding: 25px;
+        width: 300px;
+        min-height: 250px;
+        padding: 20px;
         border-radius: 20px;
         border: 2px solid rgba(255,255,255,0.2);
         box-shadow: 0 0 25px rgba(0, 200, 255, 0.25);
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: flex-start;
-        justify-content: space-between;
-    }
-    .info {
-        width: 50%;
-        padding-right: 20px;
-    }
-    .webcam-section {
-        width: 50%;
-        text-align: center;
+        justify-content: flex-start;
     }
     button {
         background: transparent;
@@ -76,6 +76,7 @@
         cursor: pointer;
         transition: 0.3s;
         box-shadow: 0 0 12px teal;
+        align-self: center;
     }
     button:hover {
         background: teal;
@@ -106,32 +107,29 @@
 <div class="starfield" id="starfield"></div>
 <h1>Posture Checker</h1>
 
-<div class="panel">
-    <div class="info">
+<div class="panel-container">
+    <div class="panel">
         <h2>How to Use</h2>
-        <p>1. Click the Start button.<br>
-           2. Allow webcam access.<br>
-           3. Sit so your upper body is visible.<br>
-           4. The AI will classify your posture in real time.</p>
-
-        <h3>What This Project Does</h3>
-        <p>This AI posture checker uses a Teachable Machine pose model to help users improve posture anywhere—at school, home, or even in bed. It identifies three posture classes: Good, Bad, and Neutral/Undetected.</p>
-
-        <h3>The Problem</h3>
-        <p>Many students and computer users spend long periods working on devices, leading to slouching, neck strain, and back discomfort. Poor posture affects focus, comfort, and long-term health, but most people don’t notice when they begin to slouch.</p>
-
-        <h3>Who Benefits</h3>
-        <p>This tool helps anyone who uses a computer or mobile device extensively. Specifically, it helps:<br>
-            • Students and teachers using Chromebooks or laptops<br>
-            • Office workers or remote workers<br>
-            • Gamers and streamers spending hours at a desk<br>
-            • Artists or programmers working on screens<br>
-            • People recovering from minor back or neck issues<br>
-            • Anyone wanting instant feedback on posture habits
-        </p>
+        <p>1. Click the Start button.<br>2. Allow webcam access.<br>3. Sit so your upper body is visible.<br>4. The AI will classify your posture in real time.</p>
     </div>
 
-    <div class="webcam-section">
+    <div class="panel">
+        <h2>What This Project Does</h2>
+        <p>This AI posture checker uses a Teachable Machine pose model to help users improve posture anywhere—at school, home, or in bed. It identifies three posture classes: Good, Bad, and Neutral/Undetected.</p>
+    </div>
+
+    <div class="panel">
+        <h2>The Problem</h2>
+        <p>Many students and computer users spend long periods working on devices, leading to slouching, neck strain, and back discomfort. Poor posture affects focus, comfort, and long-term health, but most people don’t notice when they begin to slouch.</p>
+    </div>
+
+    <div class="panel">
+        <h2>Who Benefits</h2>
+        <p>This tool helps anyone who uses a computer or mobile device extensively. Specifically:<br>• Students and teachers using Chromebooks<br>• Office workers or remote workers<br>• Gamers and streamers<br>• Artists or programmers<br>• People recovering from minor back or neck issues<br>• Anyone wanting instant posture feedback and better habits</p>
+    </div>
+
+    <div class="panel">
+        <h2>Start</h2>
         <button type="button" onclick="init()">Start</button>
         <div id="webcam-container"></div>
         <div id="label-container"></div>
@@ -191,10 +189,7 @@ async function predict() {
         if (className.toLowerCase().includes("good")) statusClass = "good";
         if (className.toLowerCase().includes("bad")) statusClass = "bad";
 
-        labelContainer.childNodes[i].innerHTML = `
-            <span class="indicator ${statusClass}"></span>
-            ${className}: ${prob}
-        `;
+        labelContainer.childNodes[i].innerHTML = `<span class="indicator ${statusClass}"></span>${className}: ${prob}`;
         labelContainer.childNodes[i].className = statusClass;
     }
 }
