--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     .indicator.good { background: #00ff9d; }
     .indicator.bad { background: #ff4343; }
     .indicator.neutral { background: #ffe066; }
+    h2, p { color: #e8d7ff; text-shadow: 0 0 8px rgba(255,255,255,0.6); }
 </style>
 </head>
 <body>
