--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         letter-spacing: 4px;
         text-shadow: 0 0 12px rgba(255,255,255,0.8);
     }
+    h2 {
+        font-size: 1.4em;
+        margin-bottom: 10px;
+        color: #9cd6ff;
+        text-shadow: 0 0 12px rgba(100, 180, 255, 0.9), 0 0 20px rgba(100, 180, 255, 0.7);
+    }
     .panel-container {
         display: flex;
         flex-wrap: wrap;
