--- a/index.html
+++ b/index.html
@@ -106,7 +106,19 @@
     .indicator.good { background: #00ff9d; }
     .indicator.bad { background: #ff4343; }
     .indicator.neutral { background: #ffe066; }
-    h2, p { color: #e8d7ff; text-shadow: 0 0 8px rgba(255,255,255,0.6); }
+    p {
+        color: #e8d7ff;
+        text-shadow: 0 0 8px rgba(255,255,255,0.6);
+    }
+
+    h2 {
+        font-size: 1.4em;
+        margin-bottom: 10px;
+        color: #9cd6ff;
+        text-shadow: 0 0 12px rgba(100, 180, 255, 0.9),
+                     0 0 22px rgba(80, 160, 255, 0.8),
+                     0 0 32px rgba(50, 120, 255, 0.6);
+    }
 </style>
 </head>
 <body>
