--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         font-size: 2.5em;
         margin: 40px 0;
         letter-spacing: 4px;
-        text-shadow: 0 0 12px rgba(255,255,255,0.8);
+        color: #c59cff;
+        text-shadow: 0 0 14px rgba(180,120,255,0.9),
+                     0 0 28px rgba(150,90,255,0.7);
     }
     h2 {
         font-size: 1.4em;
